NXP-33556: Clean up